# mercury-robust

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_coverage.sh
.github/workflows/: docs_build.yml  publish.yml  pypi_upload.yml  test.yml
docs/: index.md
docs/reference/: basetests.md  data_tests.md  model_tests.md
mercury/robust/: __init__.py  _base_batch_drift_detector.py  _category_struct.py  _chi2_drift_detector.py  _drift_simulation.py  _histogram_distance_drift_detector.py  _label_cleaning.py  _linalg.py  _metrics.py  _tree_analysis.py  _treeselector.py  basetests.py  create_tutorials.py  data_tests.py  errors.py  model_tests.py  suite.py
reference/basetests/: index.html
reference/data_tests/: index.html
reference/model_tests/: index.html
site/: 404.html  index.html  objects.inv
site/reference/basetests/: index.html
site/reference/data_tests/: index.html
site/reference/model_tests/: index.html
tests/: test_basetests.py  test_create_tutorials.py  test_data_tests.py  test_internal_utils.py  test_model_tests.py  test_suite.py
tests/csv/: test_twt.csv
tutorials/: RobustTestingExample.ipynb  TestSuite.ipynb  TestingModelsNLP.ipynb
tutorials/data/bankintents/: test.csv  train.csv
tutorials/data/credit/: UCI_Credit_card.csv
